[package]
name = "cityjson-cutter-cli"
version = "0.1.0"
authors = ["jliempt <jordi_purdi@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
cityjson_cutter = { path = "./cityjson_cutter" }
