[package]
name = "cityjson_cutter"
version = "0.1.0"
authors = ["jliempt <jordi_purdi@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
lazy_static = "1.4.0"
